
syntax ="proto3";

option csharp_namespace="Fleet.Transport";

import "google/protobuf/timestamp.proto";

service AssignmentManager{
	rpc FindAllAssignmentsByVehicle(FindAllAssignmentsByVehicleRequest) returns (stream AssignmentPayload);
	rpc FindAssignmentVehicle( FindAssignmentVehicleRequest) returns (AssignmentPayload);
	rpc FindAssignment(FindAssignmentRequest) returns (AssignmentPayload);
	rpc AddAssignmentVehicle(AssignmentPayload) returns (AssignmentPayload);
	rpc RemoveAssignmentVehicle( FindAssignmentRequest) returns (AssignmentPayload);
	rpc UpdateAssignment(AssignmentPayload) returns (AssignmentPayload);
}


message FindAssignmentVehicleRequest{
	int32 vehicle_id=1;
}
message FindAssignmentRequest{
	int32 id=1;
}
message FindAllAssignmentsByVehicleRequest{
	int32 vehicle_id=1;
}

enum AssignmentType{
	NONE = 0;
    ROLE=1;
    EMPLOYEE=2;
    SUPPORT=3;
}

message AssignmentPayload{
	  int32 id=1;
	  AssignmentType type=2;
      int32 vehicle_id=3;
	  int32 orgao_id=4;
	   int32 employee_id=5;
	  string description=6;
	  bool active = 7;
	  google.protobuf.Timestamp  date_of_assignment=8;
	  google.protobuf.Timestamp  end_date_of_assignment=9;
}